@@ -1,5 +1,10 @@
 2010-04-20  Richard Guenther  <rguenther@suse.de>
 
+	PR rtl-optimization/43438
+	* gcc.c-torture/execute/pr43438.c: New testcase.
+
+2010-04-20  Richard Guenther  <rguenther@suse.de>
+
 	PR tree-optimization/43629
 	* gcc.c-torture/execute/pr43629.c: New testcase.
 
