@@ -1,5 +1,11 @@
 2010-04-20  Richard Guenther  <rguenther@suse.de>
 
+	PR rtl-optimization/43438
+	* combine.c (make_extraction): Properly zero-/sign-extend an
+	extraction of the low part of a CONST_INT.
+
+2010-04-20  Richard Guenther  <rguenther@suse.de>
+
 	PR tree-optimization/43629
 	* tree-ssa-ccp.c (likely_value): Scan for literal constants
 	as well.  Reset all_undefined_operands if we have seen a
